feat: user favorite api
