# app/serializers/favorite_serializer.rb
@@ -1,0 +1,6 @@
+class FavoriteSerializer < ActiveModel::Serializer
+  attributes :id, :created_at
+
+  belongs_to :sale_post
+  belongs_to :user, serializer: UserSerializer
+end
