# config/routes.rb
@@ -30,7 +30,10 @@ Rails.application.routes.draw do
     resources :users, only: [:index, :show, :update, :destroy]
     resources :sale_posts do
       resources :sale_post_images, only: [:create, :destroy]
+      resources :favorites, only: [:create]
     end
+
+    resources :favorites, only: [:index, :destroy]
 
     resources :brands, only: [:index]
     resources :models, only: [:index]
